--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <html>
-    <head>
 
-    </head>
-    <body>
-        fdsa
-    </body>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+</head>
+
+<body onload={onLoad()}>
+    <div class="container">
+        <table>
+            <tr>
+                <td>Nombre:</td>
+                <td><input type="text" id="text" /></td>
+                <td><button onclick="enviar()">Enviar</button></td>
+            </tr>
+        </table>
+    </div>
+</body>
+
 </html>
